--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
@@ -20,19 +21,23 @@ jobs:
           flutter-version: '3.35.5'
 
       - name: Install Dependencies
+        working-directory: Frontend
         run: flutter pub get
 
       - name: Code Quality Check
+        working-directory: Frontend
         run: flutter analyze
 
       - name: Run Unit Tests
+        working-directory: Frontend
         run: flutter test
 
       - name: Build Application
+        working-directory: Frontend
         run: flutter build apk --release
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release
-          path: build/app/outputs/flutter-apk/*.apk
+          path: Frontend/build/app/outputs/flutter-apk/*.apk
